--- a/board/.settings/org.eclipse.core.resources.prefs
+++ b/board/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/main/java/jmp/spring/controller=UTF-8
 encoding//src/main/webapp/resources/header/list.jsp=UTF-8
+encoding//src/main/webapp/resources/header/list_b.jsp=UTF-8
