--- a/board/src/main/webapp/WEB-INF/web.xml
+++ b/board/src/main/webapp/WEB-INF/web.xml
@@ -25,8 +25,8 @@
 		<load-on-startup>1</load-on-startup>
 		
 		 <multipart-config>
-  	<location>D:\\sys\\spwork\\upload\\temp</location>
-  	<!-- <location>C:\\upload\\temp</location> -->
+  	<!-- <location>D:\\sys\\spwork\\upload\\temp</location> -->
+  	 <location>C:\\upload\\temp</location> 
   	<max-file-size>20971520</max-file-size> <!--1MB * 20 -->
   	<max-request-size>41943040</max-request-size><!-- 40MB -->
   	<file-size-threshold>20971520</file-size-threshold> <!-- 20MB -->
